--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Ulyana Zhivotenkova</title>
+    <title>Cherednichenko Sanislav CV</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&amp;display=swap" rel="stylesheet">
     <style>
         body {
@@ -139,7 +139,7 @@
                     <div><a href="https://github.com/KarandashDP"><img class="icon" src="./img/github.png" alt="Github" height="25px"><br></a></div>
                     <div><a href="https://t.me/CherednichenkoSt"><img class="icon" src="./img/telegram.png" alt="Telegram" height="25px"><br></a></div>
                     <div><a href="https://vk.com/id17330738"><img class="icon" src="./img/vk.png" alt="Facebook" height="25px"><br></a></div>
-                </div>
+            </div>
         </footer>
     </div>
 
